# 1.2.0

## Enhancements

### General

 * Carbon should now work under PowerShell v3.0!
 
### PowerShell

 * [Invoke-PowerShell](http://get-carbon.org/help/Invoke-PowerShell.html) now defaults to running under the current CLR, instead of defaulting to a v2.0 CLR.  This makes upgrading to PowerShell v3.0 easier.
 * [Invoke-PowerShell](http://get-carbon.org/help/Invoke-PowerShell.html) now writes an error and returns if running PowerShell v3.0 and you want to run under a v2.0 CLR.  Unfortunately, PowerShell v3.0 requires .NET 4.0, so you can't run anything on an earlier CLR.

### XML

 * New [Convert-XmlFile](http://get-carbon.org/help/Convert-XmlFile.html), for transforming an XML file with Microsoft's XDT (XML Data Transformation) technology.  Thanks to Mark Sargent for the contribution.

 
## Bug Fixes

### General

 * Deleted the obsolete variable `$CarbonImported`.  Carbon no longer exports any of its variables.
 

# 1.1.0 (1 April 2013)

## Upgrade Instructions

 * On Windows 2008 R2, custom identies that run IIS app pools need the `SeBatchLogonRight`.  [Install-IisAppPool](http://get-carbon.org/help/Install-IisAppPool.html) now grants this privilege on all operating systems.  If this won't work in your environment, you can remove these privileges with [Revoke-Privilege](http://get-carbon.org/help/Revoke-Privilege.html).

## Enhancements

### General

 * Fixed some typos and ommissions in the v0.5.0.1 and v0.5.0.0 sections of the release notes.
 * Updated `Import-Carbon.ps1` script to import Carbon regardless of the name of the directory Carbon is installed in.
 
### Certificates

 * Added `IssuedTo` and `IssuedBy` properties to [X509Certificate2](http://msdn.microsoft.com/en-us/library/ms148409(v=vs.90).aspx) objects.  The values match what the Certificates MMC snap-in displays.